--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,20 +1,58 @@
 ﻿<Window x:Class="SpeedwayClientWpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:speedwayClientWpf="clr-namespace:SpeedwayClientWpf"
+        Title="Speedway Client v0.5" Height="500" Width="700"
+        DataContext="{x:Static speedwayClientWpf:MainWindowViewModel.Instance}"
+        Background="RosyBrown">
+    <Window.Resources>
+        <speedwayClientWpf:TypeToColorConverter x:Key="TypeToColorConverter" />
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Menu>
-            <MenuItem Header="File"></MenuItem>
+            <MenuItem Header="File" />
             <MenuItem Header="Help">
-                <MenuItem Header="About"></MenuItem>
+                <MenuItem Header="About"/>
             </MenuItem>
         </Menu>
         <Grid Grid.Row="1">
-            
+            <Grid.RowDefinitions>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <GroupBox Header="Listening" DataContext="{Binding Listener}" >
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Computer" Margin="5"/>
+                    <TextBox Text="{Binding IpAddress}" Grid.Column="1" MinWidth="150" Margin="5"/>
+                    <Button Grid.Row="1" Grid.Column="1" Content="Start listening" Command="{Binding StartListeningCommand}" Margin="5"/>
+                    <Button Grid.Row="2" Grid.Column="1" Content="Stop listening" Command="{Binding StopListeningCommand}" Margin="5"/>
+                </Grid>
+            </GroupBox>
+            <GroupBox Header="Logging" Grid.Column="1">
+                <ListBox ItemsSource="{Binding Messages}" Margin="5" >
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Text}" Foreground="{Binding Type, Converter={StaticResource TypeToColorConverter}}" />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                    </ListBox>
+                    
+            </GroupBox>
         </Grid>
     </Grid>
 </Window>
