--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,7 +14,9 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Menu>
-            <MenuItem Header="File" />
+            <MenuItem Header="File" >
+                <MenuItem Header="Exit" Command="{Binding ExitCommand}"/>
+            </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem Header="About"/>
             </MenuItem>
@@ -37,21 +39,29 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Computer" Margin="5"/>
+                    
+                    <TextBlock Text="Local IP address" Margin="5"/>
                     <TextBox Text="{Binding IpAddress}" Grid.Column="1" MinWidth="150" Margin="5"/>
-                    <Button Grid.Row="1" Grid.Column="1" Content="Start listening" Command="{Binding StartListeningCommand}" Margin="5"/>
-                    <Button Grid.Row="2" Grid.Column="1" Content="Stop listening" Command="{Binding StopListeningCommand}" Margin="5"/>
+
+                    <TextBlock Text="Local port" Margin="5" Grid.Row="1"/>
+                    <TextBox Text="{Binding Port}" Grid.Row="1" Grid.Column="1" MinWidth="150" Margin="5"/>
+
+                    <StackPanel Grid.Row="2" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button Content="Start listening" Command="{Binding StartListeningCommand}" Margin="5" MinWidth="100"/>
+                        <Button Content="Stop listening" Command="{Binding StopListeningCommand}" Margin="5" MinWidth="100"/>
+                    </StackPanel>
+                    
                 </Grid>
             </GroupBox>
             <GroupBox Header="Logging" Grid.Column="1">
                 <ListBox ItemsSource="{Binding Messages}" Margin="5" >
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Text}" Foreground="{Binding Type, Converter={StaticResource TypeToColorConverter}}" />
+                            <TextBlock Text="{Binding Text}" Foreground="{Binding Type, Converter={StaticResource TypeToColorConverter}}"
+                                       FontWeight="Bold"/>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
-                    </ListBox>
-                    
+                </ListBox>
             </GroupBox>
         </Grid>
     </Grid>
