--- a/ReaderControl.xaml
+++ b/ReaderControl.xaml
@@ -18,10 +18,10 @@
             </Grid.ColumnDefinitions>
             <TextBlock Text="{Binding Name}" Grid.Column="0" Margin="5"/>
             <TextBlock Text="IP address" Grid.Column="1" Margin="5"/>
-            <TextBox Text="{Binding IpAddress}" Grid.Column="2" Margin="5"/>
+            <TextBox Text="{Binding IpAddress, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Margin="5"/>
             <TextBlock Text="Port" Grid.Column="3" Margin="5"/>
-            <TextBox Text="{Binding Port}" Grid.Column="4" Margin="5" Width="70"/>
-            <Button Content="Connect" Command="{Binding ConnectCommand}" Grid.Column="5" Margin="5" Width="70"/>
+            <TextBox Text="{Binding Port, UpdateSourceTrigger=PropertyChanged}" Grid.Column="4" Margin="5" Width="70"/>
+            <Button Content="{Binding ConnectButtonContent}" Command="{Binding ConnectCommand}" Grid.Column="5" Margin="5" Width="70"/>
         </Grid>
     </Border>
 </UserControl>
