--- a/App.xaml
+++ b/App.xaml
@@ -65,5 +65,9 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        
+        <Style TargetType="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
     </Application.Resources>
 </Application>
