--- a/ReaderControl.xaml
+++ b/ReaderControl.xaml
@@ -5,23 +5,36 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Border BorderBrush="DarkGray">
+    <Border BorderBrush="Gray" BorderThickness="1">
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock Text="{Binding Name}" Grid.Column="0" Margin="5"/>
-            <TextBlock Text="IP address" Grid.Column="1" Margin="5"/>
-            <TextBox Text="{Binding IpAddress, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Margin="5"/>
-            <TextBlock Text="Port" Grid.Column="3" Margin="5"/>
-            <TextBox Text="{Binding Port, UpdateSourceTrigger=PropertyChanged}" Grid.Column="4" Margin="5" Width="70"/>
-            <Button Content="{Binding ConnectButtonContent}" Command="{Binding ConnectCommand}" Grid.Column="5" Margin="5" Width="70"/>
+            
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    
+                    <TextBlock Text="{Binding Name}" Grid.Column="0" Margin="5"/>
+                    <TextBlock Text="IP address" Grid.Column="1" Margin="5"/>
+                    <TextBox Text="{Binding IpAddress, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Margin="5" />
+                    <TextBlock Text="Port" Grid.Column="3" Margin="5"/>
+                    <TextBox Text="{Binding Port, UpdateSourceTrigger=PropertyChanged}" Grid.Column="4" Margin="5" Width="50"/>
+                    <Button Content="{Binding ConnectButtonContent}" Command="{Binding ConnectCommand}" Grid.Column="5" Margin="5" Width="70"/>
+               
+                    <TextBlock Text="Current time:" Grid.Column="6" Margin="5"/>
+                    <TextBlock Text="{Binding CurrentTime}" Grid.Column="7" FontSize="16" Margin="5" Width="60"/>
+                    <Button Content="Update" Grid.Column="8" Command="{Binding UpdateTimeCommand}" Margin="5" Width="70"/>
+                    <TextBox Text="{Binding TimeToSet}" Grid.Column="9" Margin="5"/>
+                    <Button Content="Set time" Command="{Binding SetTimeCommand}" Grid.Column="10" Margin="5" Width="70"/>
         </Grid>
     </Border>
 </UserControl>
