--- a/ReaderControl.xaml
+++ b/ReaderControl.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="SpeedwayClientWpf.ReaderControl"
+﻿<UserControl xmlns:SpeedwayClientWpf="clr-namespace:SpeedwayClientWpf"  
+             x:Class="SpeedwayClientWpf.ReaderControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Border BorderBrush="Gray" BorderThickness="1">
+    <Border BorderBrush="#ece6d5" BorderThickness="1">
         <Grid>
             
                     <Grid.ColumnDefinitions>
@@ -31,10 +32,10 @@
                     <Button Content="{Binding ConnectButtonContent}" Command="{Binding ConnectCommand}" Grid.Column="5" Margin="5" Width="70"/>
                
                     <TextBlock Text="Current time:" Grid.Column="6" Margin="5"/>
-                    <TextBlock Text="{Binding CurrentTime}" Grid.Column="7" FontSize="16" Margin="5" Width="60"/>
+                    <TextBlock Text="{Binding CurrentTime}" Grid.Column="7" FontSize="14" Margin="5" Width="60"/>
                     <Button Content="Update" Grid.Column="8" Command="{Binding UpdateTimeCommand}" Margin="5" Width="70"/>
                     <TextBox Text="{Binding TimeToSet}" Grid.Column="9" Margin="5"/>
-                    <Button Content="Set time" Command="{Binding SetTimeCommand}" Grid.Column="10" Margin="5" Width="70"/>
+            <Button Content="Set time" Command="{Binding SetTimeCommand}" Grid.Column="10" Margin="5" Width="70"/>
         </Grid>
     </Border>
 </UserControl>
