--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:speedwayClientWpf="clr-namespace:SpeedwayClientWpf"
         xmlns:viewModels="clr-namespace:SpeedwayClientWpf.ViewModels"
-        Title="Speedway Client v0.5" Height="470" Width="900"
-        MinHeight="300" MinWidth="400"
+        Title="Speedway RFID Connector v0.5" Height="500" Width="900"
+        MinHeight="400" MinWidth="600"
         DataContext="{x:Static viewModels:MainWindowViewModel.Instance}"
         Icon="Rfid-Tag.ico"
         Background="DarkGray">
@@ -110,7 +110,7 @@
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Text}" Foreground="{Binding Type, Converter={StaticResource TypeToColorConverter}}"
-                                       FontWeight="Bold"/>
+                                       FontWeight="Bold" ToolTip="{Binding Text}"/>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
