--- a/ReaderControl.xaml
+++ b/ReaderControl.xaml
@@ -13,7 +13,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
@@ -21,7 +21,7 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="4*"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
                     
@@ -35,7 +35,7 @@
                     <TextBlock Text="Current time:" Grid.Column="6" Margin="5"/>
                     <TextBlock Text="{Binding CurrentTime}" Grid.Column="7" FontSize="14" Margin="5" Width="60"/>
                     <Button Content="Update" Grid.Column="8" Command="{Binding UpdateTimeCommand}" Margin="5" Width="70"/>
-            <ld:Dameer Format="Custom" CustomFormat="MM/dd/yyyy hh:mm:ss tt" Value="{Binding TimeToSet}" ShowCheckBox="False" Grid.Column="9" Margin="5"/>
+            <ld:Dameer Format="Custom" CustomFormat="MM/dd/yyyy HH:mm:ss" Value="{Binding TimeToSet}" ShowCheckBox="False" Grid.Column="9" Margin="5"/>
             <!--<TextBox Text="{Binding TimeToSet}" Grid.Column="9" Margin="5"/>-->
             <Button Content="Set time" Command="{Binding SetTimeCommand}" Grid.Column="10" Margin="5" Width="70"/>
         </Grid>
