--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -106,14 +106,42 @@
             </GroupBox>
 
             <GroupBox Header="Logging" Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" Margin="1">
-                <ListBox ItemsSource="{Binding Messages}" Margin="5" >
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <RadioButton GroupName="Log" Content="Show all reads" Margin="5" IsChecked="True" Name="Rdb1"/>
+                        <RadioButton GroupName="Log" Content="Show only filtered reads" Margin="5" IsChecked="{Binding IsLogFiltered}" Name="Rdb2"/>
+                    </StackPanel>
+                    <ListBox Grid.Row="1" Grid.ColumnSpan="2"  Margin="3" >
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Text}" Foreground="{Binding Type, Converter={StaticResource TypeToColorConverter}}"
                                        FontWeight="Bold" ToolTip="{Binding Text}"/>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
+                        <ListBox.Style>
+                            <Style>
+                                <Style.Triggers>
+                                    <MultiDataTrigger>
+                                <MultiDataTrigger.Conditions>
+                                    <Condition Binding="{Binding ElementName=Rdb1,Path=IsChecked}" Value="True"/>
+                                </MultiDataTrigger.Conditions>
+                                <Setter Property="ListBox.ItemsSource" Value="{Binding Messages}" />
+                            </MultiDataTrigger>
+                            <MultiDataTrigger>
+                                <MultiDataTrigger.Conditions>
+                                    <Condition Binding="{Binding ElementName=Rdb2,Path=IsChecked}" Value="True"/>
+                                </MultiDataTrigger.Conditions>
+                                <Setter Property="ListBox.ItemsSource" Value="{Binding FilteredMessages}" />
+                            </MultiDataTrigger>
+                        </Style.Triggers>
+                                </Style>
+                            </ListBox.Style>
                 </ListBox>
+                </Grid>
             </GroupBox>
         </Grid>
     </Grid>
