--- a/ReaderControl.xaml
+++ b/ReaderControl.xaml
@@ -33,7 +33,7 @@
                     <Button Content="{Binding ConnectButtonContent}" Command="{Binding ConnectCommand}" Grid.Column="5" Margin="5" Width="70"/>
                
                     <TextBlock Text="Current time:" Grid.Column="6" Margin="5"/>
-                    <TextBlock Text="{Binding CurrentTime}" Grid.Column="7" FontSize="14" Margin="5" Width="60"/>
+                    <TextBlock Text="{Binding CurrentTimeForUser}" Grid.Column="7" FontSize="14" Margin="5" Width="60"/>
                     <Button Content="Update" Grid.Column="8" Command="{Binding UpdateTimeCommand}" Margin="5" Width="70"/>
             <ld:Dameer Format="Custom" CustomFormat="MM/dd/yyyy HH:mm:ss" Value="{Binding TimeToSet}" ShowCheckBox="False" Grid.Column="9" Margin="5"/>
             <!--<TextBox Text="{Binding TimeToSet}" Grid.Column="9" Margin="5"/>-->
