--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:speedwayClientWpf="clr-namespace:SpeedwayClientWpf"
         xmlns:viewModels="clr-namespace:SpeedwayClientWpf.ViewModels"
-        Title="Speedway RFID Connector v0.6" Height="550" Width="900"
+        Title="Speedway RFID Connector v0.6" Height="580" Width="900"
         MinHeight="400" MinWidth="600"
         DataContext="{x:Static viewModels:MainWindowViewModel.Instance}"
         Icon="Resources/Rfid-Tag.ico"
@@ -83,6 +83,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -108,6 +109,8 @@
                     <CheckBox Grid.Row="5" Grid.ColumnSpan="2" Content="Play sound for all reads" IsChecked="{Binding PlaySoundForRead}" Margin="5"/>
 
                     <CheckBox Grid.Row="6" Grid.ColumnSpan="2" Content="Play sound for filtered reads" IsChecked="{Binding PlaySoundForFilteredRead}" Margin="5"/>
+
+                    <CheckBox Grid.Row="7" Grid.ColumnSpan="2" Content="Update reader's time manually" IsChecked="{Binding UpdateReadersTimeManually}" Margin="5"/>
                 </Grid>    
             </GroupBox>
 
