--- a/ReaderControl.xaml
+++ b/ReaderControl.xaml
@@ -35,7 +35,7 @@
                
                     <TextBlock Text="Current time:" Grid.Column="6" Margin="5"/>
                     <TextBlock Text="{Binding CurrentTimeForUser}" Grid.Column="7" FontSize="14" Margin="5" Width="60"/>
-                    <Button Content="Update" Grid.Column="8" Command="{Binding UpdateTimeCommand}" Margin="5" Width="70"/>
+                    <Button Content="Refresh" Grid.Column="8" Command="{Binding UpdateTimeCommand}" Margin="5" Width="70"/>
                     <ld:Dameer Format="Custom" CustomFormat="MM/dd/yyyy HH:mm:ss" Value="{Binding TimeToSet}" ShowCheckBox="False" 
                        IsEnabled="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}, 
                         Path=DataContext.Settings.UpdateReadersTimeManually}" Grid.Column="9" Margin="5"/>
